mybril/src/snapshots/mybril__test__basic_blocks-2.snap
---
source: mybril/src/main.rs
expression: blocks
---
[
  [
    {
      "op": "const",
      "type": "int",
      "dest": "v0",
      "value": 1
    },
    {
      "op": "const",
      "type": "int",
      "dest": "v1",
      "value": 2
    },
    {
      "op": "add",
      "type": "int",
      "dest": "v2",
      "args": [
        "v0",
        "v1"
      ]
    },
    {
      "op": "print",
      "args": [
        "v2"
      ]
    }
  ]
]
