mybril/src/snapshots/mybril__test__basic_blocks.snap
---
source: mybril/src/main.rs
expression: blocks
---
[
  [
    {
      "op": "const",
      "type": "int",
      "dest": "v",
      "value": 4
    },
    {
      "op": "const",
      "type": "bool",
      "dest": "b",
      "value": false
    },
    {
      "op": "br",
      "args": [
        "b"
      ]
    }
  ],
  [
    {
      "label": "here"
    },
    {
      "op": "const",
      "type": "int",
      "dest": "v",
      "value": 2
    }
  ],
  [
    {
      "label": "there"
    },
    {
      "op": "print",
      "args": [
        "v"
      ]
    }
  ]
]
