mybril/src/snapshots/mybril__test__dot-4.snap
---
source: mybril/src/main.rs
expression: dot(&bril)
---
digraph main {
  b0;
}
digraph add2 {
  b0;
}

