mybril/src/snapshots/mybril__test__dot-5.snap
---
source: mybril/src/main.rs
expression: dot(&bril)
---
digraph main {
  b0;
}
digraph print4 {
  b0;
}

