mybril/src/snapshots/mybril__test__dot-7.snap
---
source: mybril/src/main.rs
expression: dot(&bril)
---
digraph main {
  b0;
  b1;
  somewhere;
  b0 -> somewhere;
  b1 -> somewhere;
}

