mybril/src/snapshots/mybril__test__dot-9.snap
---
source: mybril/src/main.rs
expression: dot(&bril)
---
digraph main {
  b0;
  here;
  there;
  b0 -> here;
  b0 -> there;
}

