mybril/src/snapshots/mybril__test__dot.snap
---
source: mybril/src/main.rs
expression: dot(&bril)
---
digraph main {
  b0;
  here;
  there;
  b0 -> there;
  b0 -> here;
  here -> there;
}

