mybril/src/snapshots/mybril__test__dot@add-overflow.json.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/add-overflow.json
---
digraph pow {
  b0;
  loop;
  body;
  ret;
  b0 -> loop;
  loop -> ret;
  loop -> body;
  body -> loop;
}
digraph main {
  b0;
}

