mybril/src/snapshots/mybril__test__dot@add.json.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/add.json
---
digraph main {
  b0;
}

