mybril/src/snapshots/mybril__test__dot@br.bril.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/test/interp/core/br.bril
---
digraph main {
  b0;
  here;
  there;
  b0 -> there;
  b0 -> here;
  here -> there;
}

