mybril/src/snapshots/mybril__test__dot@br.json.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/br.json
---
digraph main {
  b0;
  here;
  there;
  b0 -> there;
  b0 -> here;
  here -> there;
}

